# SQIsign-Fixed-Precision

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.cmake/: sqisign_variant.cmake
include/: sqisign_namespace.h
src/id2iso/ref/: lvlx.cmake
src/id2iso/ref/lvlx/: dim2id2iso.c
src/mini-gmp/: mini-gmp.c
src/precomp/ref/lvl1/: endomorphism_action.c  quaternion_data.c  torsion_constants.c
src/precomp/ref/lvl1/include/: quaternion_data.h
src/precomp/ref/lvl3/: endomorphism_action.c  quaternion_data.c
src/precomp/ref/lvl3/include/: torsion_constants.h
src/precomp/ref/lvl5/: endomorphism_action.c  quaternion_data.c  torsion_constants.c
src/precomp/ref/lvl5/include/: torsion_constants.h
src/quaternion/ref/generic/: CMakeLists.txt  dpe.c  ideal.c  intbig.c  lattice.c  normeq.c
src/quaternion/ref/generic/hnf/: hnf_tests.c  ibz_division.c
src/quaternion/ref/generic/include/: intbig.h
src/quaternion/ref/generic/internal_quaternion_headers/: dpe.h  internal.h  lll_internals.h
src/quaternion/ref/generic/lll/: l2.c  lll_applications.c  lll_benchmarks.c  lll_tests.c  lll_verification.c
src/quaternion/ref/generic/test/: CMakeLists.txt  intbig.c  integers.c  normeq.c  test_quaternions.c
src/signature/ref/: lvlx.cmake
src/signature/ref/lvlx/: keygen.c  sign.c
src/signature/ref/lvlx/test/: test_signature.c
test/: test_sqisign.c
the-sqisign-main/: README.md
the-sqisign-main/src/: CMakeLists.txt
the-sqisign-main/src/precomp/ref/: lvlx.cmake
the-sqisign-main/src/precomp/ref/lvl1/include/: torsion_constants.h
the-sqisign-main/src/precomp/ref/lvl3/: torsion_constants.c
the-sqisign-main/src/quaternion/ref/generic/: intbig.c
the-sqisign-main/src/quaternion/ref/generic/hnf/: ibz_division.c
the-sqisign-main/src/quaternion/ref/generic/include/: intbig.h
the-sqisign-main/src/quaternion/ref/generic/test/: ideal.c  lattice.c  test_quaternions.c
